--- a/css/input.css
+++ b/css/input.css
@@ -3,3 +3,6 @@
  @plugin "daisyui" {
    themes: all;
  }
+ @import "flowbite/src/themes/default";
+@plugin "flowbite/plugin";
+@source "../node_modules/flowbite";
